@startuml db_schema
title Obsidian to Anki — SQLite Database Schema (obsidian_to_anki.db)

skinparam classAttributeIconSize 0
skinparam classBorderColor #555555
skinparam classBackgroundColor #FAFAFA
skinparam noteBackgroundColor #FFFDE7
skinparam noteBorderColor #F9A825

hide empty members
hide circle

' ─── Tables ───────────────────────────────────────────────────────────────────

entity notes {
  **id : TEXT** <<PK>>
  --
  anki_id : INTEGER       <<nullable>>
  file_path : TEXT        <<NOT NULL>>
  line_number : INTEGER   <<NOT NULL>>
  note_type : TEXT        <<NOT NULL>>
  field_1 : TEXT
  field_2 : TEXT
  image_paths : TEXT      <<JSON array>>
  tags : TEXT             <<JSON array>>
  deck_name : TEXT
  created_at : TEXT       <<ISO-8601 UTC>>
  updated_at : TEXT       <<ISO-8601 UTC>>
}

entity file_hashes {
  **file_path : TEXT** <<PK>>
  --
  sha256 : TEXT       <<NOT NULL>>
  updated_at : TEXT   <<ISO-8601 UTC>>
}

entity added_media {
  **filename : TEXT** <<PK>>
}

entity anki_notes {
  **anki_id : INTEGER** <<PK>>
  --
  note_type : TEXT        <<NOT NULL>>
  field_1 : TEXT
  field_2 : TEXT
  tags : TEXT             <<JSON array>>
  deck_name : TEXT
  mod_timestamp : INTEGER <<Anki mod time>>
  synced_at : TEXT        <<ISO-8601 UTC>>
}

' ─── VIEW ─────────────────────────────────────────────────────────────────────

entity "note_comparison" <<VIEW>> #LightCyan {
  anki_id : INTEGER
  note_type : TEXT
  file_path : TEXT
  vault_field_1 : TEXT
  anki_field_1 : TEXT
  vault_field_2 : TEXT
  anki_field_2 : TEXT
  vault_tags : TEXT
  anki_tags : TEXT
  vault_deck : TEXT
  anki_deck : TEXT
  mod_timestamp : INTEGER
  **status : TEXT**
}

note right of "note_comparison"
  Derived by two-branch query:

  Branch 1 — vault-side:
    LEFT JOIN notes → anki_notes ON anki_id

  Branch 2 — orphan-side:
    LEFT JOIN anki_notes → notes ON anki_id
    WHERE notes.anki_id IS NULL

  status values:
  ─────────────────────────────────
  not_in_anki    vault note, anki_id IS NULL
  stale_id       vault has anki_id, absent
                 from anki_notes snapshot
  modified       both present, field_1 or
                 field_2 content differs
  synced         both present, fields agree
  orphan_in_anki in Anki, not referenced
                 by any vault note
  ─────────────────────────────────
  Field comparison strips inline file-stem
  suffix (<br><b>…</b>) before comparing.
end note

' ─── Relationships ────────────────────────────────────────────────────────────

notes::anki_id }o--o| anki_notes::anki_id : "nullable FK\n(JOIN in VIEW)"

"note_comparison" ..> notes      : "reads (branch 1)"
"note_comparison" ..> anki_notes : "reads (both branches)"

@enduml
